# GDR

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V1.md  PROMPT_build.md  PROMPT_plan.md  README.md  ROADMAP.md  configure.ac
.github/workflows/: build.yml  changelog.yml
cmake/: config.h.cin
data/: README.md  build_demo_wad.sh  demo-wad-spec.md
data/maps/: demo_maps.txt
data/things/: enemies.txt  powerups.txt  weapons.txt
docs/: MODDING.md
docs/plans/: 2026-03-13-build-fix-design.md  2026-03-13-build-fix-plan.md  2026-03-13-wad-independent-ui-design.md  2026-03-13-wad-independent-ui-plan.md
scripts/: build-test.sh  config-test.sh  deterministic-replay-test.sh  memory-leak-test.sh  network-test.sh  package-linux.sh  package-macos.sh  package-windows.ps1  release.sh  save-load-test.sh  smoke-test.sh
specs/: boss-dwarven-war-machine.md  boss-goblin-king.md  ci-cd.md  custom-weapon-template.md  dehacked-dice-weapons.md  enemy-template.md  example-tc-pack.md  game-identity.md  map-themes.md  network-protocol.md  powerup-test-map.md  spawn-groups.md  spawn-tuning.md  wad-sprites.md  weapon-balance.md
src/: .gitignore  CMakeLists.txt  Makefile.am  colormap_data.h  d_event.h  d_iwad.c  d_loop.c  d_loop.h  d_mode.h  doomtype.h  gdr_face.h  gdr_font.h  gdr_stubs.c  gusconf.c  i_cloud.c  i_cloud.h  i_crash.h  i_endoom.c  i_input.c  i_joystick.c  i_oplmusic.c  i_pcsound.c  i_pcstack.c  i_sdlsound.c  i_sound.c  i_sound.h  i_system.c  i_system.h  i_video.c  i_video.h  i_winmusic.c  m_config.c  m_controls.c  m_controls.h  net_client.c  net_client.h  net_common.c  net_common.h  net_dedicated.c  net_defs.h  (+23 more)
src/doom/: CMakeLists.txt  Makefile.am  d_englsh.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_player.h  d_think.h  dbg_ovl.c  dbg_ovl.h  deh_bexstr.c  dice_predict.c  dice_predict.h  dice_projectile_lag.c  dice_projectile_lag.h  dmg_ovl.c  dmg_ovl.h  doomdef.h  doomstat.c  doomstat.h  dstrings.c  enemy_templates.h  f_finale.c  g_achievement.c  g_achievement.h  g_balance.h  g_demo_test.c  g_demo_test.h  g_game.c  g_game.h  g_leaderboard.c  g_leaderboard.h  g_powerup.c  g_powerup.h  g_replay.c  g_replay.h  g_rpg.c  g_rpg.h  (+78 more)
src/heretic/: d_main.c  d_net.c  doomdef.h  g_game.c  mn_menu.c  p_inter.c  r_main.c  r_plane.c
src/hexen/: d_net.c  g_game.c  h2_main.c  h2def.h  mn_menu.c  p_inter.c  r_main.c  r_plane.c
src/setup/: compatibility.c  compatibility.h  joystick.c  keyboard.c  mainmenu.c  mode.c  multiplayer.c  sound.c
src/strife/: d_main.c  d_net.c  g_game.c  g_game.h  m_menu.c  p_inter.c  r_main.c  r_plane.c  s_sound.c
